I just added "scroll-behavior: smooth;" to make my site scroll more smoothly. Ref. https://developer.mozilla.org/en-US/docs/Web/CSS/scroll-behavior

--- a/style.css
+++ b/style.css
@@ -7599,6 +7599,10 @@
 
 
 /*============================= Global Styles Section =============================*/
+* {
+    scroll-behavior: smooth;
+}
+
 /* Ref. https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_sup_default_css */
 sup {
     vertical-align: super;
