--- a/style.css
+++ b/style.css
@@ -8043,7 +8043,7 @@ nav input[type='checkbox'], nav label {
 }
 
 .nav__link--anchor-primary:hover {
-    background: linear-gradient(90deg, rgba(84,68,120,0.7687861271676301) 18%, rgba(0,0,0,1) 63%);
+    background: linear-gradient(82deg, rgba(84,68,120,0.7687861271676301) 18%, rgba(0,0,0,1) 63%);
 }
 
 .link__hover-effect:after {
@@ -8056,27 +8056,53 @@ nav input[type='checkbox'], nav label {
     transition: all 300ms ease;
 }
 
-.link__hover-effect--white:after {
-    background-color: white;
+.link__hover-effect:hover:after {
+    width: 100%;
+    left: 0;
+}
+
+.link__hover-effect--adhs {
+    text-decoration: none;
+    position: absolute;
+    background: linear-gradient(82deg, rgb(255, 204, 7), #6030b1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.link__hover-effect--adhs::after {
+    content: '';
+    position: absolute;
+    width: 150%;
+    height: 0.188em;
+    left: 0;
+    bottom: -0.188em;
+    background: linear-gradient(82deg, orange, blue);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease-in-out;
+}
+
+.link__hover-effect--adhs:hover::after {
+    transform: scaleX(1);
 }
 
 /* Ref. https://www.amberddesign.com/gradient-underline-links-with-animation/ */
 .link__hover-effect--red-hot {
     text-decoration: none;
-    position: relative;
-    color: black;
+    position: absolute;
+
 }
     
 .link__hover-effect--red-hot::after {
     content: '';
     position: absolute;
-    width: 50%;
-    height: 0.188rem;
+    width: 100%;
+    height: 0.5em;
     left: 0;
-    bottom: -0.188rem;
-    background: linear-gradient(82deg, orange, red, white, blue);
+    bottom: -0.5rem;
+    background: linear-gradient(to bottom, orange, red, white, blue);
     transform: scaleX(0);
-    transform-origin: left;
+    transform-origin: top;
     transition: transform 0.3s ease-in-out;
 }
     
@@ -8084,14 +8110,31 @@ nav input[type='checkbox'], nav label {
     transform: scaleX(1);
 }
 
-.link__hover-effect--gold:after {
-    background-color: #71713a;
+.link__hover-effect--gold { /**/
+    text-decoration: none;
+    position: absolute;
+    background: linear-gradient(82deg, rgb(255, 204, 7), #6030b1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.link__hover-effect:hover:after {
+.link__hover-effect--gold::after {
+    content: '';
+    position: absolute;
     width: 100%;
+    height: 0.188rem;
     left: 0;
+    bottom: -0.188rem;
+    background: linear-gradient(82deg, #6030b1, rgb(255, 204, 7));
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease-in-out;
 }
+
+.link__hover-effect--gold:hover::after {
+    transform: scaleX(1);
+}
+
 
 /* THIS INTERFERES WITH MY with my <sup class="SUP2">! DO NOT WANT THIS TO TARGET EVERYTHING. Really cool approach; but it will take me more work to rebuild my site, rather using this as an individual class. KEEP IN CODE FOR POSSIBLE FUTURE USE. This is new to me (CSS4 tag, and currently CSS4 is still in draft mode, but some browsers have already implemented it). CSS is now versioned as a series of modules, with each module containing a specific set of features: the "i" selector Ref. https://stackoverflow.com/questions/27506735/what-does-i-mean-in-a-css-attribute-selector I have used a hover effect before, but not targeting with this selector (I think it was more of and ID/class). */
 /* i:hover {
@@ -8554,9 +8597,6 @@ nav input[type='checkbox'], nav label {
 }
 
 .glow {
-    background: linear-gradient(to top, #F99242, darkorange);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     text-align: center;
     -webkit-animation: glow 0.3s ease-in-out infinite alternate;
     -moz-animation: glow 0.3s ease-in-out infinite alternate;
@@ -8565,9 +8605,6 @@ nav input[type='checkbox'], nav label {
 }
 
 .glow2 {
-    background: linear-gradient(to top, #F99242, darkorange);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     text-align: center;
     -webkit-animation: glow 0.7s ease-in-out infinite alternate;
     -moz-animation: glow 0.7s ease-in-out infinite alternate;
@@ -8576,13 +8613,18 @@ nav input[type='checkbox'], nav label {
 }
 
 .glow3 {
-    background: linear-gradient(to top, #F99242, darkorange);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     text-align: center;
     -webkit-animation: glow 0.9s ease-in-out infinite alternate;
     -moz-animation: glow 0.9s ease-in-out infinite alternate;
     animation: glow 0.9s ease-in-out infinite alternate;
+    text-decoration: none;
+}
+
+.glow4 {
+    text-align: center;
+    -webkit-animation: glow 3s ease-in-out infinite alternate;
+    -moz-animation: glow 3s ease-in-out infinite alternate;
+    animation: glow 3s ease-in-out infinite alternate;
     text-decoration: none;
 }
 
