--- a/style.css
+++ b/style.css
@@ -7598,6 +7598,9 @@
     .résumé {
         font-size: large !important;
     }
+    .footer__row {
+        padding: 0% !important;
+    }
 
     .footer__logo--img {
         width: 3em !important;
@@ -7605,10 +7608,8 @@
     }
 
     .footer__logo--popper {
-        font-weight: 900;
-        font-size: larger;
-        opacity: 0;
-        
+        top: 1em !important;
+        font-size: medium !important;
     }
 
     .footer__copyright {
@@ -8710,6 +8711,7 @@ footer {
 }
 
 .footer__logo--img {
+    top: 3em;
     width: 12em;
     height: 12em;
 }
@@ -8717,10 +8719,10 @@ footer {
 .footer__logo--popper {
     position: absolute;
     right: 0;
-    top: 2.25em;
-    font-weight: 700;
+    top: 3.5em;
+    font-weight: 900;
     opacity: 0;
-    transition: all 300ms ease;
+    font-size: x-large;
     transition: all 300ms ease;
     text-align: center;
     -webkit-animation: glow 1.3s ease-in-out infinite alternate;
